Comenzando las clases

--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-        <p>hola</p>
-    </body>
+  <head></head>
+  <body>
+    <h1>Titulo 1</h1>
+    <h2>Tittulo 2</h2>
+    <h3>Tittulo 3</h3>
+    <h4>Tittulo 4</h4>
+    <h5>Tittulo 5</h5>
+    <p>hola</p>
+    <span>Span</span>
+    <small>Small</small>
+    <i>Icono</i>
+    <div style="border: 1px solid; height: 100px"></div>
+    <div>
+      <input type="text" />
+    </div>
+    <div>
+      <input type="password" />
+    </div>
+    <div>
+      <input type="button" value="Enviar"/>
+    </div>
+  </body>
 </html>
