--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
     <head></head>
     <body>
-        <p>hola</p>
-    </body>
+        <h1>titulo 1</h1>
+        <h2>titulo 1</h2>
+        <h3>titulo 2</h3>
+        <h4>titulo 3</h4>
+        <h5>titulo 4</h5>
+    <p>hola</p>
+    <span>span</span>
+    <small>Small</small>
+    <i>icono</i>
+    <div style="border: 1px solid; height: 100px"></div>
+    <input type="text"/>
+    <input type="pasword"/>
+    <input type="button" value="Enviar"/>
+
+</body>
 </html>
