--- a/index.html
+++ b/index.html
@@ -13,13 +13,33 @@
     <i>Icono</i>
     <div style="border: 1px solid; height: 100px"></div>
     <div>
-      <input type="text" />
+      <input type="text"/>
     </div>
     <div>
       <input type="password" />
     </div>
     <div>
       <input type="button" value="Enviar"/>
+    </div>
+    <div>
+      <button type="button">Enviar</button>
+    </div>
+    <div>
+      <input type="radio" name="asd" value="M"/> Masculino
+      <input type="radio" name="asd" value="F"/> Femenino
+    </div>
+    <div>
+      <input type="checkbox" name="b" value="b"/> Blanco
+      <input type="checkbox" name="n" value="n"/> Negro
+    </div>
+    <div>
+      <select>
+        <option value="ci">Cedula de indentidad</option>
+        <option value="pas">Pasaporte</option>
+      </select>
+    </div>
+    <div>
+      <textarea rows="8" cols="20"></textarea>
     </div>
   </body>
 </html>
