Trabajando con estilos

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head></head>
   <body>
-    <h1>Titulo 1</h1>
-    <h2>Tittulo 2</h2>
+    <h1 style="color: #3498db; background-color: #7f8c8d;">Titulo 1</h1>
+    <h2 style="background-color: #7f8c8d;">Tittulo 2</h2>
     <h3>Tittulo 3</h3>
     <h4>Tittulo 4</h4>
     <h5>Tittulo 5</h5>
