--- a/tablas.html
+++ b/tablas.html
@@ -27,6 +27,14 @@
             <button>Enviar</button>
           </td>
         </tr>
+        <tr>
+          <td>2</td>
+          <td>27240628</td>
+          <td colspan="2">Jesus Sanchez</td>
+          <td></td>
+          <td></td>
+          
+        </tr>
       </tbody>
     </table>
   </body>
