--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <body>
     <h1 style="color: #3498db; background-color: #7f8c8d;">Titulo 1</h1>
     <h2 style="background-color: #7f8c8d;">Tittulo 2</h2>
-    <h3>Tittulo 3</h3>
-    <h4>Tittulo 4</h4>
+    <h3 style="color: rgba(241, 196, 15,1.0); background-color:rgba(142, 68, 173,1.0);">titulo 3</h3>
+    <h4 style="color:#2ecc71; background-color: #e74c3c;">Tittulo 4</h4>
     <h5>Tittulo 5</h5>
     <p>hola</p>
     <span>Span</span>
