--- a/login/index.html
+++ b/login/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
 <html>
    <head>
-</head>
-<body>
-    
-</body>
+   </head>
+   <body>
+      <div></div>
+      <div></div>
+   </body>
 </html>
