--- a/login/index.html
+++ b/login/index.html
@@ -61,10 +61,10 @@
             </form>
         </div>
         <div class="inside-right">
-            <a>Lost your password?</a>
+            <a class="text-alighn">Lost your password?</a>
         </div>
         <div class="inside-right">
-            <a>Back to UCoockies</a>
+            <a class=Text-alighn">Back to UCoockies</a>
         </div>
     </div>
 </body>
